added user input

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
     <string name="bio">
         Hi,\n\t My name is Vishnu. \n\n
        I Love to code.\n\n
-       Last year (2020) read The Alchemist and Listened to Gary Vee, during the initial stage of Covid-19 first wave across the glob\n\n
+       Last year (2020) read The Alchemist and Listened to Gary Vee, during the initial stage of Covid-19 around the glob\n\n
 
        There after decided to quit Audit profession(relating to accounting and finance) after 8 years of long journey.\n\n
 
